--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,4 +1,1 @@
-
-# Add a cmake binary taget (in this case, a library)
-#add_library(lib1 lib1.cpp lib1.hpp)
-#add_library(lib2 INTERFACE lib2.hpp)
+add_subdirectory(lib1)
